# HLMV-Qt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: MacOSXBundleInfo.plist.in
cmake/DragNDrop/: DS_Store
install/: hlmv.fa  readme.txt
msvc/: Half Life Model Viewer.dsp  Half Life Model Viewer.dsw
res/: Icon.icns  makeicns.sh
src/: ControlPanel.cpp  ControlPanel.h  GlWindow.cpp  GlWindow.h  StudioModel.h  ViewerSettings.cpp  ViewerSettings.h  gl.h  main.cpp  mdlviewer.cpp  mdlviewer.h  pakviewer.cpp  pakviewer.h  studio.h  studio_render.cpp  studio_utils.cpp  studio_utils.cpp.bak
src/c/: hlmv_application.cpp  hlmv_application.h  hlmv_body.cpp  hlmv_display.cpp  hlmv_event.cpp  hlmv_file.cpp  hlmv_origin.cpp  hlmv_seq.cpp  hlmv_tab.cpp  hlmv_texture.cpp  main.cpp  qt_image.cpp  qt_image.h
src/m/: IceKey.cpp  IceKey.hpp  StudioModel.h  TGAlib.cpp  ViewerSettings.cpp  ViewerSettings.h  bmpread.cpp  bmpread.h  gl_draw.cpp  gl_draw.h  mod_decryptor.cpp  mod_decryptor.h  studio.h  studio_render.cpp  studio_utils.cpp
src/v/: hlmv.cpp  hlmv.h  hlmv.ui  myopenglwidget.cpp  myopenglwidget.h
src/v/platform/macos/: MacWindow.mm  Touchbar.mm
src/v/platform/win32/: AeroWindow.cpp
